syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1;
}
